--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<link rel="stylesheet" href="css/styles.css">
+<link rel="stylesheet" href="styles.css">
 <meta charset="utf-8">
 <title>Расписание МАТ.ФАК. 2 сем  БЕЗ ДОТ</title>
 </head>
