--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="styles.css">
-<meta charset="utf-8">
+<meta http-equiv="Content_Type" content="text/html; charset=utf-8">
 <title>Расписание МАТ.ФАК. 2 сем  БЕЗ ДОТ</title>
 </head>
 <body>
